# eros-nft

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  README.zh.md
.github/workflows/: ci.yml  release.yml
crates/eros-nft/: Cargo.toml  README.md
crates/eros-nft/samples/persona-akira-tsundere-ex/: draft.json  manifest.json
crates/eros-nft/samples/persona-alex-second-chance-ex/: draft.json
crates/eros-nft/samples/persona-anonymous-42-minimal/: draft.json
crates/eros-nft/samples/persona-coach-mike/: README.md  draft.json
crates/eros-nft/samples/persona-daddy-marcus/: draft.json  manifest.json
crates/eros-nft/samples/persona-kira-hacker-cat/: draft.json  manifest.json
crates/eros-nft/samples/persona-lin-confidante/: README.md  manifest.json
crates/eros-nft/samples/persona-marco-italian-boss/: README.md  draft.json  manifest.json
crates/eros-nft/samples/persona-nina-isekai-princess/: README.md  draft.json  manifest.json
crates/eros-nft/samples/persona-yuki-warm-senpai/: draft.json
crates/eros-nft/samples/persona-yuna-flirty-friend/: draft.json
crates/eros-nft/src/: error.rs  lib.rs  sample.rs  schema.rs  types.rs  validate.rs
crates/eros-nft/tests/: all_samples_validate.rs  cli_subcommands.rs  error_construction.rs  sample_loader_smoke.rs  schema_export.rs  types_behavior.rs  types_compliance.rs  types_prompt_ref.rs  types_subtypes.rs  types_top_level.rs  validate_invalid.rs  validate_smoke.rs
samples/: README.md
samples/persona-akira-tsundere-ex/: README.md
spec/: CHANGELOG.md  README.md
(+50 files in other folders)
