[package]
name = "eros-nft"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "Reference implementation of the eros-nft v1 spec: types, validators, sample loader, and CLI for Solana persona NFT cards."
repository = "https://github.com/etherfunlab/eros-nft"
homepage = "https://github.com/etherfunlab/eros-nft"
documentation = "https://docs.rs/eros-nft"
readme = "README.md"
keywords = ["solana", "nft", "persona", "cnft", "spec"]
categories = ["data-structures", "command-line-utilities"]

[lib]
name = "eros_nft"
path = "src/lib.rs"

[[bin]]
name = "eros-nft"
path = "src/bin/eros_nft.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonschema = { version = "0.30", default-features = false }
ulid = { version = "1.2", features = ["serde"] }
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
include_dir = "0.7"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
